# HumToSong

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  justfile  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: admin.py  describe.py  identify.py  match.py
backend/app/models/: admin.py  emotion.py  music.py  objects.py
backend/app/services/: admin.py  db.py  gemini_client.py  gemini_text.py  gemini_vision.py  meting_client.py  music_matcher.py  openai_client.py  qq_music.py
backend/data/: music_library.json
backend/scripts/meting/: meting_service.mjs  package-lock.json  package.json
backend/static/: index.html
backend/static/assets/: index-7hF4bILs.css  index-D6DefIR9.js
backend/tests/: test_matcher.py
docs/: DEPLOYMENT.md  prdtest.md  tecprd.md
docs/archive/: creation
frontend/: biome.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioVisualizer.tsx  BottomNav.tsx  CameraPreview.tsx  Card3DCarousel.tsx  ChargeEffect.tsx  GestureParticles.tsx  HandCursor.tsx
frontend/src/hooks/: useHandGesture.ts
frontend/src/lib/: api.ts  cardStorage.ts  collaboration.ts  emotionAnalyzer.ts  firebase.ts  gestureDetector.ts  i18n.tsx  soundEngine.ts  translations.ts
frontend/src/pages/: CameraPage.tsx  CollabPage.tsx  CollectionPage.tsx  HomePage.tsx  PlayPage.tsx  ResultPage.tsx  SettingsPage.tsx
frontend/src/stores/: appStore.ts  gestureStore.ts
